# voice-activated-assistant

./: .gitignore  LICENSE  README.md  example_actions_config.yml  example_settings_config.yml  print_files.py  pyproject.toml  requirements.txt  setup.py
kuloaikaleo/: actions.py  config.py  kaaoao.py  leo.py  live_response.md  main.py  output.txt  prompt.txt  speech-to-text-benchmark.py  utils.py
scripts/: generate_ping.py  print_files.py  speech-to-text-benchmark.py  test_distil.py
src/llm-action-prompts/: general_gpt.md  jira_ticket.md  pull_request.md
src/voice_action_assistant/: actions.py  config.py  llm.py  main.py  recorder.py  speech-to-text-benchmark.py  transcriber.py  utils.py
